--- a/index.html
+++ b/index.html
@@ -6,28 +6,13 @@
   <title>Denton Kunz</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="main.js" defer></script>
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  
+  <div id="navbar-placeholder"></div>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Home</a>
-    	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      	  <span class="navbar-toggler-icon"></span>
-   	</button>
-    	<div class="collapse navbar-collapse" id="navbarNav">
-      	  <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
-            </li>
-      	  </ul>
-    	</div>
-    </div>
-  </nav>
   <div class="container">
     <h1>About Me</h1>
     <p>I am a Master's Student at Willamette University studying Data Science.</p>
