--- a/about.html
+++ b/about.html
@@ -14,7 +14,14 @@
   <div id="navbar-placeholder"></div>
 
   <div class="container">
-    <h1>Projects</h1>
+    <h2>Contact Information</h2>
+    <ul>
+        <li>Github: <a href="https://github.com/dkunz2024">dkunz2024</a></li>
+        <li>LinkedIn: <a href="www.linkedin.com/in/dentonk">www.linkedin.com/in/dentonk</a></li>
+        <li>Email: dkunz2024@gmail.com</li>
+    </ul>
+    <h1>About Me</h1>
+    <p>I am a Master's Student at Willamette University studying Data Science.</p>
   </div>
 </body>
 </html>
