--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
   <div id="navbar-placeholder"></div>
 
   <div class="container">
-    <h1>Projects</h1>
+    <h1>Resume</h1>
   </div>
 </body>
 </html>
