--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 
   <div class="container">
     <h1>Projects</h1>
+
+    <h2>Adv. Data Engineering</h2>
+    <p></p>
+    
+    <h2>Masters Data Science Capstone</h2>
+    <p></p>
   </div>
 </body>
 </html>
