--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
   <div id="navbar-placeholder"></div>
 
   <div class="container">
-    <h1>Resume</h1>
+	<embed src="resources/resume.pdf" type="application/pdf" width="100%" height="1200px">
   </div>
 </body>
 </html>
