--- a/about.html
+++ b/about.html
@@ -21,7 +21,18 @@
         <li>Email: dkunz2024@gmail.com</li>
     </ul>
     <h1>About Me</h1>
-    <p>I am a Master's Student at Willamette University studying Data Science.</p>
+    <p>
+    Hello, I'm Denton! I'm a computer scientist and aspiring data engineer who loves automating workflows and building systems. I am currently a Master's Student at Willamette University finishing my final term!
+    </p>
+    <p>
+    I love teaching myself new things. It's amazing the amount of resources you can find online for whatever subject you're interested in. Most recently, I have been teaching myself about servers and networking. I have set up a home server using an old laptop and hosted databases for school projects. Beyond CS (computer science), my other interests include music, playing guitar, and language learning. 
+    </p>
+    <p>
+    I started my career at Oregon State University, where I graduated from the Honors College Summa Cum Laude. I learned about programming basics, algorithms, data structures, web development, databases, operating systems, and so much more. Oregon State gave me the confidence to be able to learn anything CS related. With that, I started thinking about what I really wanted to study. I knew that data-related fields would only continue to grow as companies collect more information and employ machine learning for analytics. Therefore, I decided to enroll in Willamette's Master's in Data Science program.
+    </p>
+    <p>
+    At Willamette, I learned about data visualization, ethics, analytics, organization, and more. But as a computer scientist, I found that I really enjoyed data engineering specifically. Thinking about the most efficient way to store data in memory and for computation fell right in my wheelhouse. There is nothing more enjoyable than designing a system and iterating on it until it is as efficient as it can be. I'm excited to learn all that I can in order to do so!
+    </p>
   </div>
 </body>
 </html>
