--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <h2>Masters Data Science Capstone</h2>
     <p>
-    My project partner and I scraped Trimet data for both the schedule and usage of particular stops and routes. This data was polished, normalized, and populated into a Postgres database running on my home network. We performed statistical and machine learning analysis processes to predict usage as a result of other features. This project encapsulates everything that I have learned as a result of Willamette's MSDS program: Answering a research question through data wrangling, organization, and analytics.</p>
+    My project partner and I scraped Trimet data for both the schedule and usage of particular stops and routes. This data was polished, normalized, and populated into a Postgres database running on my home network. We performed statistical and machine learning analysis processes to predict usage as a result of other features. This project encapsulates everything that I have learned as a result of Willamette's MSDS program: Answering a research question through data wrangling, organization, and analytics. The full report can be found here:</p>
+    <a href="https://wu-msds-capstones.github.io/trimet-usage-data/">FULL CAPSTONE REPORT</a>
 
     <h2>Adv. Data Engineering</h2>
     <p>
