--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </ul>
     <h1>About Me</h1>
     <p>
-    Hello, I'm Denton! I'm a computer scientist and aspiring data engineer who loves automating workflows and building systems. I am currently a Master's Student at Willamette University finishing my final term!
+    Hello, I'm Denton! I'm a computer scientist and aspiring data engineer who loves automating workflows and building systems. I most recently graduated from Willamette University's Masters of Data Science program.
     </p>
     <p>
     I love teaching myself new things. It's amazing the amount of resources you can find online for whatever subject you're interested in. Most recently, I have been teaching myself about servers and networking. I have set up a home server using an old laptop and hosted databases for school projects. Beyond CS (computer science), my other interests include music, playing guitar, and language learning. 
