--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
   <div class="container">
     <h1>Past Projects</h1>
 
-    <h2>Masters Data Science Capstone</h2>
+    <h2>Masters Data Science Capstone Project</h2>
     <p>
-    My project partner and I scraped Trimet data for both the schedule and usage of particular stops and routes. This data was polished, normalized, and populated into a Postgres database running on my home network. We performed statistical and machine learning analysis processes to predict usage as a result of other features. This project encapsulates everything that I have learned as a result of Willamette's MSDS program: Answering a research question through data wrangling, organization, and analytics. The full report can be found here: <a href="https://wu-msds-capstones.github.io/trimet-usage-data/">FULL CAPSTONE REPORT</a></p>
+    This project encapsulates all of the skills I have learned as a result of Willamette's MSDS program: Answering a research question through data wrangling, data organization, and data analytics. My project partner and I scraped Trimet data for both the schedule and usage of particular stops and routes. This data was polished, normalized, and populated into a Postgres database running on my home network. We performed statistical and machine learning analysis processes to predict usage as a result of other features. The full report can be found here: <a href="https://wu-msds-capstones.github.io/trimet-usage-data/">FULL CAPSTONE REPORT</a></p>
 
-    <h2>Adv. Data Engineering</h2>
-    <p>
-    In order to best prepare us for data engineering in industry, our professor set up a Postgres, MongoDB, and Neo4j source database, MinIO bucket, Grafana dashboard, and more on his home network for us to SSH into. Twice throughout the term, he would rotate the projects and each team would get a new one. This required us to write documentation for our own projects and read documentation to learn the new. This was also a great experience in working on a data engineering team. Working concurrently on the same project introduced complexities and helped me realize the importance of ensuring everyone is on the same page throughout the project.</p>
+    <h2>Advanced Data Engineering</h2>
     <p>
     For this project, the professor simulated Prague Metro data. Students were required to take snapshots of source databases into an s3 bucket or data lake. We then organized that data from the lake into a data warehouse, using dimension and fact tables. Dimension tables include passenger information, line/station information, and specific turnstile information. We managed the turnstile schedules, accounting for any temporary overrides. We answered business questions such as "Which specific line experiences the most demand by hour and by day of the week?" and "Which passenger fare types are most common?".
     </p>
+    <p>
+    In order to best prepare us for data engineering in industry, our professor set up a Postgres, MongoDB, and Neo4j source database, MinIO bucket, Grafana dashboard, and more on his home network for us to SSH into. Twice throughout the term, he would rotate the projects and each team would be reassigned. This required us to write documentation for our own projects and read documentation to learn the new. This was also a great experience in working on a data engineering team. Working concurrently on the same project introduced complexities and helped me realize the importance of ensuring everyone is on the same page throughout the project.</p>
 
     <h2>Data Visualization</h2>
     <p>
